Bug 67303 - [FILEOPEN] ODT import with huge number of styles very slow
Summary: [FILEOPEN] ODT import with huge number of styles very slow
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other All
: high critical
Assignee: Michael Stahl
URL:
Whiteboard: target:4.2.0 target:4.1.1 target:4.0.5
Keywords: perf, regression
: 66832 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-25 14:08 UTC by ape
Modified: 2015-12-15 11:37 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
example (95.00 KB, application/ooxml)
2013-07-25 14:08 UTC, ape
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ape 2013-07-25 14:08:17 UTC
Created attachment 82998 [details]
example

LibO-4.1.0.4; LibO-4.2.0.0+ (master)
DOCX file (attached) created WinWord12 (MSO_2007) from the web archive "Opera-12.16" (*.mht). The file opens easily, edited and saved in OOXML (*.docx) format. But:
1. Open DOCX file – everything OK.
2. Save the file as ODT.
3. Reload the ODT file – LibO_Writer_4.1{2}.0 fell asleep, probably on the hyperlinks.
4. Kill soffice.bin process
5. Start LibO_Writer_3.5.7
6. Open this ODT file - everything OK.
This is a regression: LibO_Writer_3.5.7 easily opens this ODT file, but LibO-4.1{2) can't do it.
Comment 1 retired 2013-07-25 16:53:11 UTC
Hi ape,

please don't set your own bugs to "NEW". They have to be confirmed by another user or a volunteer from the QA team.

I tried reproducing your issue with LO 4.1.0.4 on OS X 10.8.4 and when opening the odt file LO crashes indeed.

So confirming this bug.
Comment 2 ape 2013-07-25 18:30:18 UTC
(In reply to comment #1)
> Hi ape,
> 
> please don't set your own bugs to "NEW". They have to be confirmed by
> another user or a volunteer from the QA team.
> 
> I tried reproducing your issue with LO 4.1.0.4 on OS X 10.8.4 and when
> opening the odt file LO crashes indeed.
> 
> So confirming this bug.

Hi James,
 
I confirming this error on four different computers on different operating systems, not the virtual machine: Windows XP 32/64-bit; Lubuntu 13.04 32/64-bit and Debian 7.1 64-bit.
 What else should be done to confirm? I have to wait until someone deigns to pay attention to the ape’s bug and searched their error in Bugzilla?
 
Regards, ape
Comment 3 ape 2013-07-25 19:09:21 UTC
LibO 4.0.5.0 (Build ID: 7520b77f18d1c20c6fc0dbeecaab2ca8311d27f; 25 jule 2013; win_x86) has the same bug.
LibreOffice 3.6.7 works fine.
Comment 4 ape 2013-07-25 20:18:20 UTC
Apache OpenOffice 4.0.0 works fine.
Comment 5 Michael Stahl 2013-07-26 12:57:04 UTC
that's an awesome document - contains 4089 styles...

and LO spends most of the time setting some "IsHidden" property.

this one is in the bibisect range 3d4288c1c0b593421c7f6619c88584bdb7c53337..4026e1824de8ff9b5d006ae6eba491f91bc4e599:

commit a0dcf961879ab644a52f801f65466756cb144b72
Author:     Cédric Bosdonnat <cedric.bosdonnat@free.fr>
AuthorDate: Fri Nov 30 18:51:55 2012 +0100

    Hidden styles: ODF import/export
Comment 6 ape 2013-07-26 19:34:02 UTC
(In reply to comment #5)
> that's an awesome document - contains 4089 styles...

Maybe it's the result that the OOXML text document was created from a MHT file (web archive). But this is a routine daily job when creating a text document from materials found on the Internet.
 Unfortunately, LibreOffice Web cannot work with MHT files. Therefore it is necessary to use WinWord.
Comment 7 Michael Stahl 2013-07-26 22:56:41 UTC
fixed on master
Comment 8 Commit Notification 2013-07-26 22:58:28 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8fb210a2ddc0b09288316cf459bebfe196ea94fb

fdo#67303: sw: speed up setting IsHidden property on styles



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Stahl 2013-07-27 15:45:06 UTC
*** Bug 66832 has been marked as a duplicate of this bug. ***
Comment 10 ape 2013-07-27 16:47:31 UTC
Michael,
Will LibO-4.0.5.0+ and LibO-4.1.1.0+ be corrected?
Comment 11 Commit Notification 2013-07-28 13:17:34 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a82d8e86dd372f624b8c3b075582084ba237227c&h=libreoffice-4-1

fdo#67303: sw: speed up setting IsHidden property on styles


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2013-07-28 13:27:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c83026ede5a9ae57683b92d1919e874696024944&h=libreoffice-4-0

fdo#67303: sw: speed up setting IsHidden property on styles


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Robinson Tryon (qubit) 2015-12-15 11:37:15 UTC
Migrating Whiteboard tags to Keywords: (perf)
[NinjaEdit]