fdo#67303: sw: speed up setting IsHidden property on styles

Importing an ODF document with 4089 styles is ridiculously slow,
spending most of the time in SwStyleSheetIterator::First() to reset
an existing iterator.

Since the SwStyleSheetIterator can handle the case when First() has not
been called anyway, just add a new method that resets the bFirstCalled
flag, which takes next to no time.

(regression from a0dcf961879ab644a52f801f65466756cb144b72)

Change-Id: I8741b4c0cd51f8c244462ce28a754abc427d0df3