sw/inc/docstyle.hxx
@@ -175,6 +175,8 @@ public:
     virtual SfxStyleSheetBase* Find(const OUString& rStr);
 
     virtual void Notify( SfxBroadcaster&, const SfxHint& );
+
+    void InvalidateIterator();
 };
 
 
@@ -216,6 +218,8 @@ public:
 
     virtual void SAL_CALL acquire(  ) throw ();
     virtual void SAL_CALL release(  ) throw ();
+
+    void InvalidateIterator();
 
 protected:
     virtual ~SwDocStyleSheetPool();
